# sw_universal

./: .gitignore  CMakeLists.txt  Makefile
elastic/einteger/: CMakeLists.txt
elastic/einteger/performance/: einteger_performance_common.hpp  einteger_performance_orchestrate.cmake  performance.cpp  performance_compare.cpp
include/sw/universal/internal/bitvector/: bitfield_pack.hpp
include/sw/universal/internal/container/: bitfield_pack.hpp  custom_indexed_variant.hpp  sso_vector.hpp
include/sw/universal/internal/custom_indexed_variant/: custom_indexed_variant.hpp
include/sw/universal/internal/custom_tagged_variant/: custom_tagged_variant.hpp
include/sw/universal/internal/sso_vector/: sso_vector.hpp
include/sw/universal/internal/utility/: pack_element.hpp
include/sw/universal/number/einteger/: einteger_fwd.hpp  einteger_impl.hpp  numeric_limits.hpp
include/sw/universal/traits/: einteger_traits.hpp
internal/bitvector/: bitfield_pack.cpp
internal/container/: CMakeLists.txt  bitfield_pack.cpp  custom_indexed_variant.cpp  sso_vector.cpp
internal/container/performance/: sso_vector_performance.cpp  sso_vector_performance_common.hpp  sso_vector_performance_compare.cpp  sso_vector_performance_orchestrate.cmake
internal/custom_indexed_variant/: CMakeLists.txt  custom_indexed_variant.cpp
internal/custom_tagged_variant/: CMakeLists.txt  custom_tagged_variant.cpp
internal/sso_vector/: CMakeLists.txt  sso_vector.cpp
internal/utility/: CMakeLists.txt  pack_element.cpp
tools/cmake/Templates/: BenchmarkProvenance.hpp.in
